--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zc2638/node-rds.git"
+    "url": "git+https://github.com/zctod/node-rds.git"
   },
   "author": "zctod",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zc2638/node-rds/issues"
+    "url": "https://github.com/zctod/node-rds/issues"
   },
-  "homepage": "https://github.com/zc2638/node-rds",
+  "homepage": "https://github.com/zctod/node-rds",
   "dependencies": {
     "mysql": "^2.16.0",
     "pg": "^7.4.3"
